# openusd-rs

./: .gitignore  Cargo.toml  README.md  genschema.rs
.github/workflows/: ci.yml
resources/: cube.usda
resources/combine_chain/: append_over_composable.json  append_over_explicit.json  composable_only.json  delete_over_explicit.json  explicit_only.json  inert_only.json  prepend_over_composable.json  prepend_over_explicit.json
schemas/: usdGeom.usda  usdLux.usda
src/: gf.rs  lib.rs  peg.rs  tf.rs  usd_geom.rs  vt.rs
src/base/: io_ext.rs  mod.rs  peg.rs
src/base/gf/: mod.rs
src/base/tf/: mod.rs  token.rs
src/base/vt/: array.rs  mod.rs  value.rs
src/pcp/: diagnostic.rs  graph.rs  layer_stack.rs  mod.rs  prim_index.rs
src/sdf/: abstract_data.rs  file_format.rs  layer.rs  list_op.rs  mod.rs  path.rs  path_node.rs  path_parser.rs  retiming.rs  schema.rs
src/usd/: attribute.rs  mod.rs  object.rs  prim.rs  property.rs  relationschip.rs  schema_base.rs  stage.rs
src/usd_geom/: generated.rs  mod.rs  primvar.rs  primvars_api.rs  schema.usda  xform_op.rs
src/usd_lux/: generated.rs  schema.usda
src/usd_mtlx/: mod.rs
src/usd_shade/: mod.rs
src/usd_skel/: generated.rs  mod.rs  schema.usda  topology.rs
src/usda/: mod.rs  parser.rs
src/usdc/: compression.rs  integer_coding.rs  mod.rs  parser.rs  reader.rs
tests/: README.md  pcp_museum.rs  pcp_simple.rs
