[package]
name = "openusd-rs"
version = "0.1.0"
edition = "2024"
description = "Work in progress, opinionated implementation of OpenUSD in pure Rust"
repository = "https://github.com/FloatyMonkey/openusd-rs"
license = "MIT OR Apache-2.0"
categories = ["graphics", "encoding", "rendering::data-formats"]

[dependencies]
glam = "0.30.4"
half = "2.6.0"
lz4_flex = "0.11.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "genschema"
path = "genschema.rs"
